# software-supply-chain-integrity-pipeline

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  roadmap.md
.github/workflows/: ci.yml  supply-chain.yml
architecture/: component-architecture.md  data-flow.md  system-context.md  trust-boundaries.md
assets/: README.md
controls/: control-mapping.md
docs/: architecture-overview.md  design-decisions.md  use-cases.md
examples/: artifact.bin.sha256  attestation.json  dependency_risk_report.json  requirements.txt  sbom.json
src/: __init__.py  artifact_verifier.py  build_attestation.py  cli.py  dependency_audit.py  sbom_generator.py
tests/: __init__.py  test_artifact_verifier.py  test_build_attestation.py  test_dependency_audit.py  test_sbom_generator.py
tools/: sbom_stub.py  vuln_triage_stub.py
